; ModuleID = '/home/carl/AnghaBench/poco/Data/SQLite/src/extr_sqlite3.c_nth_valueFinalizeFunc.c'
source_filename = "/home/carl/AnghaBench/poco/Data/SQLite/src/extr_sqlite3.c_nth_valueFinalizeFunc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.NthValueCtx = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @nth_valueFinalizeFunc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nth_valueFinalizeFunc(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.NthValueCtx*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i64 @sqlite3_aggregate_context(i32* %4, i32 0)
  %6 = inttoptr i64 %5 to %struct.NthValueCtx*
  store %struct.NthValueCtx* %6, %struct.NthValueCtx** %3, align 8
  %7 = load %struct.NthValueCtx*, %struct.NthValueCtx** %3, align 8
  %8 = icmp ne %struct.NthValueCtx* %7, null
  br i1 %8, label %9, label %26

9:                                                ; preds = %1
  %10 = load %struct.NthValueCtx*, %struct.NthValueCtx** %3, align 8
  %11 = getelementptr inbounds %struct.NthValueCtx, %struct.NthValueCtx* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %26

14:                                               ; preds = %9
  %15 = load i32*, i32** %2, align 8
  %16 = load %struct.NthValueCtx*, %struct.NthValueCtx** %3, align 8
  %17 = getelementptr inbounds %struct.NthValueCtx, %struct.NthValueCtx* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = call i32 @sqlite3_result_value(i32* %15, i64 %18)
  %20 = load %struct.NthValueCtx*, %struct.NthValueCtx** %3, align 8
  %21 = getelementptr inbounds %struct.NthValueCtx, %struct.NthValueCtx* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = call i32 @sqlite3_value_free(i64 %22)
  %24 = load %struct.NthValueCtx*, %struct.NthValueCtx** %3, align 8
  %25 = getelementptr inbounds %struct.NthValueCtx, %struct.NthValueCtx* %24, i32 0, i32 0
  store i64 0, i64* %25, align 8
  br label %26

26:                                               ; preds = %14, %9, %1
  ret void
}

declare dso_local i64 @sqlite3_aggregate_context(i32*, i32) #1

declare dso_local i32 @sqlite3_result_value(i32*, i64) #1

declare dso_local i32 @sqlite3_value_free(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
